--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,11 @@ nav li {
 	text-align: center;
 	cursor: pointer;
 }
-ul li:hover {
+.hovered {
 	background-color: orange;
+}
+.unhovered {
+	background-color: #3B3ACA;
 }
 
 ul li>ul {
@@ -46,7 +49,7 @@ ul li>ul {
 	list-style-type: none;
 	width: 150px;
 	height: 30px;
-	background-color: #D33A22;
+	background-color: #D33A42;
 	border: 1px solid grey;
 	position: relative;
 	display: block;
