--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,35 @@ nav li {
 	height: 600px;
 	float: right;
 }
+#carousel {
+	position: absolute;
+	overflow: hidden;
+	width: 618px;
+	height: 230px;
+	left: 90px;
+}
+#carousel>img {
+	position: absolute;
+	top: 15px;
+	width: 198px;
+	height: 198px;
+}
+#wrapper {
+	position: relative;
+}
+#leftButton {
+	width: 50px;
+	height: 230px;
+	position: absolute;
+	left: 0px;
+}
+#rightButton {
+	width: 50px;
+	height: 230px;
+	position: absolute;
+	right: 0px;
+	top: 0px;
+}
 aside {
 	width: 200px;
 	height: 600px;
@@ -67,6 +96,20 @@ input[onclick="foo()"] {
 	top: 50px;
 	left: 900px;
 }
+.scrollButton {
+	position: relative;
+	top: 100px;
+	left: 20px;
+	cursor: pointer;
+}
+
+.scrollButton:hover {
+	-webkit-transform: scale(1.2);
+	-moz-transform: scale(1.2);
+	-ms-transform: scale(1.2);
+	-o-transform: scale(1.2);
+	transform: scale(1.2);
+}
 .blockMenu {
 	position: relative;
 	list-style-type: none;
@@ -93,9 +136,23 @@ input[onclick="foo()"] {
 	background: url("../imgs/canselButton.png");
 	position: absolute;
 	top: 5px;
-	right: 20px;
+	right: 5px;
 	z-index: 5;
 	cursor: pointer;
+}
+.transform:hover {
+	-webkit-transform: scale(1.2);
+	-moz-transform: scale(1.2);
+	-ms-transform: scale(1.2);
+	-o-transform: scale(1.2);
+	transform: scale(1.2);
+}
+.transform:active {
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	-o-transform: scale(1.1);
+	transform: scale(1.1);/**/
 }
 .openGallery {
 	width: 797px;
