--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ nav li {
 	list-style-type: none;
 	float: left;
 	/*margin: 10px 0px 0px 15px;*/
-	width: 150px;
+	width: 200px;
 	height: 26px;
 	background-color: #D33A42;
 	border: 1px solid grey;
@@ -24,6 +24,40 @@ nav li {
 	font-size: 20px;
 	text-align: center;
 	cursor: pointer;
+}
+nav li:hover {
+	background: orange;
+}
+#container {
+	position: relative;
+	width: 997px;
+	height: 600px;
+	border-right: 3px solid #4F81D3;
+	overflow: hidden;
+}
+aside {
+	float: left;
+	width: 200px;
+	height: 600px;
+	background-color: #4F81D3;
+	overflow: hidden;
+}
+#section {
+	position: absolute;
+	left: 200px;
+	width: 800px;
+	height: 600px;
+	float: right;
+	z-index: 0;
+}
+.openGallery {
+	position: absolute;
+	top: 600px;
+	width: 797px;
+	height: 0px;
+	border-top: 3px solid #4F81D3;
+	overflow: auto;
+	background: #fff;
 }
 #wsMap {
 	width: 797px;
@@ -59,76 +93,18 @@ nav li {
 	right: 0px;
 	top: 0px;
 }
-aside {
-	width: 200px;
-	height: 600px;
-	background-color: #4F81D3;
-}
-section {
-	position: relative;
-	width: 797px;
-	height: 600px;
-	float: right;
-	border-right: 3px solid #4F81D3;
-	z-index: 0;
-}
-footer {
-	position: relative;
-	width: 1000px;
-	height: 150px;
-	background-color: #7B4FD3;
-}
-ul li>ul {
-	position: relative;
-	top: 5px;
-	color: white;
-	font-size: 16px;
-	text-align: center;
-	cursor: pointer;
-}
-ul li>ul li {
-	display: none;
-	text-align: left;
-	padding-left: 10px;
-}
-input[onclick="foo()"] {
-	position: relative;
-	top: 50px;
-	left: 900px;
-}
 .scrollButton {
 	position: relative;
 	top: 100px;
 	left: 20px;
 	cursor: pointer;
 }
-
 .scrollButton:hover {
 	-webkit-transform: scale(1.2);
 	-moz-transform: scale(1.2);
 	-ms-transform: scale(1.2);
 	-o-transform: scale(1.2);
 	transform: scale(1.2);
-}
-.blockMenu {
-	position: relative;
-	list-style-type: none;
-	width: 150px;
-	height: 30px;
-	background-color: #D33A42;
-	border: 1px solid grey;
-	position: relative;
-	display: block;
-	z-index: 1;
-}
-.hovered {
-	background-color: orange;
-}
-.unhovered {
-	background-color: #3B3ACA;
-}
-.noneMenu {
-	display: none;
 }
 .canselButton {
 	width: 15px;
@@ -139,6 +115,149 @@ input[onclick="foo()"] {
 	right: 5px;
 	z-index: 5;
 	cursor: pointer;
+}
+#categoryList {
+	position: absolute;
+	top: 50px;
+	left: -175px;
+	list-style-type: none;
+	color: white;
+	display: none;
+}
+#searchFilter {
+	position: absolute;
+	width: 175px;
+	color: white;
+	left: -200px;
+	display: none;
+}
+#sf_block_1 {
+	top: 10px;
+}
+#sf_block_1 span {
+	margin-left: 15px;
+}
+#sf_block_3 {
+	top: 100px;
+	left: 15px;
+}
+#sf_block_3 li {
+	list-style-type: none;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+#sf_block_4 {
+	top: 380px;
+	left: 15px;
+}
+#sf_block_4 input {
+	margin-bottom: 5px;
+}
+#sf_block_2 {
+	top: 0px;
+	left: 90px;
+	width: 120px;
+	height: 40px;
+}
+#sf_block_2 input {
+	margin-right: 5px;			
+}
+input[name=text] {
+	top: 50px;
+	left: 15px;
+}
+input[name=toSearch] {
+	width: 75px;
+}
+.posabs {
+	position: absolute;
+}
+#categoryList li {
+	width: 150px;
+	margin-bottom: 15px;
+}
+#categoryList li input {
+	margin-right: 10px;
+}
+#categoryList #filter {
+	width: 150px;
+	height: 20px;
+	background-color: #900;
+	text-align: center;
+	cursor: pointer;
+}
+#categoryList #filter:hover {
+	-webkit-transform: scale(1.05);
+	-moz-transform: scale(1.05);
+	-ms-transform: scale(1.05);
+	-o-transform: scale(1.05);
+	transform: scale(1.05);/**/
+}
+#categoryList #filter:active {
+	-webkit-transform: scale(1.02);
+	-moz-transform: scale(1.02);
+	-ms-transform: scale(1.02);
+	-o-transform: scale(1.02);
+	transform: scale(1.02);/**/
+}
+#actionsWindow_1 {
+	left: 800px;
+}
+.actionsWindow {
+	position: absolute;
+	width: 997px;
+	height: 600px;
+	display: none;
+	background: #333;
+}
+#actionsWindow_2>input {
+	position: absolute;
+	top: 20px;
+	left: 300px;
+	width: 400px;
+	height: 20px;
+}
+.aw3_divs {
+	left: 300px;
+	width: 300px;
+	height: 20px;
+}
+#actionsWindow_3 {
+	display: none;
+	opacity: 0;
+}
+#actionsWindow_2 {
+	display: none;
+	opacity: 0;
+}
+#actionsWindow_3 input[type=textarea] {
+	float: right;
+}
+#actionsWindow_3 input[type=button] {
+	position: absolute;
+	left: 300px;
+	top: 200px;
+	width: 200px;
+}
+#actionsWindow_3 #aw3_date {
+	position: absolute;
+	top: 50px;
+}
+#actionsWindow_3 #aw3_place {
+	position: absolute;
+	top: 100px;
+}
+#actionsWindow_3 #aw3_desc {
+	position: absolute;
+	top: 150px;
+}
+#aboutWindow {
+	position: absolute;
+	left: 800px;
+	width: 997px;
+	height: 600px;
+	display: none;
+	background: #094;
 }
 .transform:hover {
 	-webkit-transform: scale(1.2);
@@ -154,21 +273,11 @@ input[onclick="foo()"] {
 	-o-transform: scale(1.1);
 	transform: scale(1.1);/**/
 }
-.openGallery {
-	width: 797px;
-	height: 0px;
-	border-top: 3px solid #4F81D3;
-	overflow: auto;
-	background: #fff;
-	position: absolute;
-	top: 600px;
-}
-.galleryImage {
-	width: 220px;
-	height: 220px;
-	float: left;
-	margin: 15px;
-	outline: 1px solid grey;	
+footer {
+	position: relative;
+	width: 1000px;
+	height: 150px;
+	background-color: #7B4FD3;
 }
 * {
 	margin: 0px;
