--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,16 @@
 <head>
 	<title>Белые журавли</title>
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no, maximum-scale=1" /> 
-	<link href="{% static 'whiteshadoofs/css/style.css' %}" rel="stylesheet" type="text/css"/>
-	<script type="text/javascript" src="{% static 'whiteshadoofs/js/jquery-2.1.3.min.js' %}"></script>
-	<script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU&mode=debug" type="text/javascript"></script>
-	<script src="{% static 'whiteshadoofs/js/mediator.js' %}"></script>
+	<link href="{% static 'whiteshadoofs/css/document.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'whiteshadoofs/css/header.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'whiteshadoofs/css/menu.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'whiteshadoofs/css/main_section.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'whiteshadoofs/css/left_panel.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'whiteshadoofs/css/map.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'whiteshadoofs/css/gallery.css' %}" rel="stylesheet" type="text/css"/>
+
+	<script src="{% static 'whiteshadoofs/js/jquery-2.1.3.min.js' %}"></script>
+	<script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU&mode=debug"></script>
 	<script src="{% static 'whiteshadoofs/js/menu.js' %}"></script>
 	<script src="{% static 'whiteshadoofs/js/gallery.js' %}"></script>
 	<script src="{% static 'whiteshadoofs/js/data.js' %}"></script>
@@ -219,5 +225,6 @@
 </div>
 </body>
 <script src="{% static 'whiteshadoofs/js/init.js' %}"></script>
+<script src="{% static 'whiteshadoofs/js/mediator.js' %}"></script>
 <script src="{% static 'whiteshadoofs/js/script.js' %}"></script>
 </html>
