--- a/static/whiteshadoofs/css/gallery.css
+++ b/static/whiteshadoofs/css/gallery.css
@@ -60,3 +60,9 @@
     z-index: 5;
     cursor: pointer;
 }
+.objectInfo {
+    width: 180px;
+    margin: auto;
+    margin-top: 5px;
+    overflow: auto;
+}
