before returning pre commit for figure out how logging works

--- a/css/left_panel.css
+++ b/css/left_panel.css
@@ -2,8 +2,8 @@
 aside {
     float: left;
     width: 200px;
-    height: 450px;
-    overflow: hidden;
+    height: 1450px;
+    overflow: auto;
     background-image: url("../images/aside.png");
     background-repeat: no-repeat;
     background-position: 5px 0px;
