trying to use ajax and LoadingObjectManager

--- a/templates/index.html
+++ b/templates/index.html
@@ -224,7 +224,7 @@
 	<footer id="footer"></footer>
 </div>
 </body>
-<script src="{% static 'whiteshadoofs/js/init.js' %}"></script>
+<script src="{% static 'whiteshadoofs/js/map.js' %}"></script>
 <script src="{% static 'whiteshadoofs/js/mediator.js' %}"></script>
 <script src="{% static 'whiteshadoofs/js/script.js' %}"></script>
 </html>
