the ancillary commit between workdays

--- a/static/whiteshadoofs/css/menu.css
+++ b/static/whiteshadoofs/css/menu.css
@@ -65,7 +65,7 @@ nav li:hover {
     display: none;
     font-family: "Arial", sans-serif;
 }
-#addObject {
+#add_object {
     position: absolute;
     top: 15px;
     width: 175px;
@@ -187,14 +187,14 @@ nav li:hover {
     display: none;
     background: #094;
 }
-#addObject li {
+#add_object li {
     margin-bottom: 15px;
 }
-#addObject input[type=file] {
+#add_object input[type=file] {
     width: 150px;
     overflow: auto;
 }
-#addObject input[name=comments] {
+#add_object input[name=comments] {
 }
 input[name=title] {
     top: 50px;
