commit before changing main menu (javascript)

--- a/templates/ws/main_menu.html
+++ b/templates/ws/main_menu.html
@@ -1,4 +1,4 @@
-<ul id="mainMenu" class="oops">
+<ul id="main_menu">
     <li id="category">Категории
     </li>
     <li id="actions">Мероприятия
@@ -6,5 +6,7 @@
     <li id="about">О проекте
     </li>
     <li id="search">Поиск
+    </li>
+    <li id="">Войти
     </li>
 </ul>
