other ancilary commit between workdays

--- a/static/whiteshadoofs/css/menu.css
+++ b/static/whiteshadoofs/css/menu.css
@@ -203,3 +203,11 @@ input[name=title] {
 input[name=to_search] {
     width: 75px;
 }
+#profile_window {
+    position: absolute;
+    left: 800px;
+    width: 997px;
+    height: 450px;
+    display: none;
+    background: #777;
+}
