--- a/templates/ws/base.html
+++ b/templates/ws/base.html
@@ -25,12 +25,12 @@
 		<div id="auth"></div>
 	</header>
 	<nav>
-        {% include 'ws/main_menu.html' %}
+        {% include 'ws/menu/main_menu.html' %}
 	</nav>
 	<section id="container">
 		<aside id="aside">
-            {% include 'ws/category_list.html' %}
-            {% include 'ws/search_filter.html' %}
+            {% include 'ws/menu/category/category_list.html' %}
+            {% include 'ws/menu/search/search_filter.html' %}
 			<div id="search_result">
 				<div id="sr_block">
 
