another ancillary commit between workdays

--- a/templates/ws/gallery/gallery.html
+++ b/templates/ws/gallery/gallery.html
@@ -3,7 +3,7 @@
     <div id="leftButton">
     <!-- контейнер для картинки левой кнопки, которая
         позиционируется относительно этого контейнера -->
-        <img id="left" src="{% static 'whiteshadoofs/imgs/left.png' %}" alt="" class="scrollButton transform">
+        <img id="left" src="{% static 'ws/imgs/left.png' %}" alt="" class="scrollButton transform">
     </div>
     <div id="carousel">
     <!-- контейнер для галереи-карусели картинок, загружается javascript'ом -->
@@ -17,6 +17,6 @@
     <div id="rightButton">
     <!-- контейнер для картинки правой кнопки, которая
         позиционируется относительно этого контейнера -->
-        <img id="right" src="{% static 'whiteshadoofs/imgs/right.png' %}" alt="" class="scrollButton transform">
+        <img id="right" src="{% static 'ws/imgs/right.png' %}" alt="" class="scrollButton transform">
     </div>
 </div>
