--- a/templates/ws/base.html
+++ b/templates/ws/base.html
@@ -4,24 +4,24 @@
 <head>
 	<title>Белые журавли</title>
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no, maximum-scale=1" />
-	<link href="{% static 'whiteshadoofs/css/document.css' %}" rel="stylesheet" type="text/css"/>
-	<link href="{% static 'whiteshadoofs/css/header.css' %}" rel="stylesheet" type="text/css"/>
-	<link href="{% static 'whiteshadoofs/css/menu.css' %}" rel="stylesheet" type="text/css"/>
-	<link href="{% static 'whiteshadoofs/css/main_section.css' %}" rel="stylesheet" type="text/css"/>
-	<link href="{% static 'whiteshadoofs/css/left_panel.css' %}" rel="stylesheet" type="text/css"/>
-	<link href="{% static 'whiteshadoofs/css/map.css' %}" rel="stylesheet" type="text/css"/>
-	<link href="{% static 'whiteshadoofs/css/gallery.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'ws/css/document.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'ws/css/header.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'ws/css/menu.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'ws/css/main_section.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'ws/css/left_panel.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'ws/css/map.css' %}" rel="stylesheet" type="text/css"/>
+	<link href="{% static 'ws/css/gallery.css' %}" rel="stylesheet" type="text/css"/>
 
-	<script src="{% static 'whiteshadoofs/js/jquery-2.1.3.min.js' %}"></script>
+	<script src="{% static 'ws/js/jquery-2.1.3.min.js' %}"></script>
 	<script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU&mode=debug"></script>
-	<script src="{% static 'whiteshadoofs/js/menu.js' %}"></script>
-	<script src="{% static 'whiteshadoofs/js/gallery.js' %}"></script>
-	<script src="{% static 'whiteshadoofs/js/data.js' %}"></script>
+	<script src="{% static 'ws/js/menu.js' %}"></script>
+	<script src="{% static 'ws/js/gallery.js' %}"></script>
+	<script src="{% static 'ws/js/data.js' %}"></script>
 </head>
 <body>
 <div id="main_wrapper">
 	<header>
-		<img id="logo" src="{% static 'whiteshadoofs/imgs/logo.png' %}" alt="Белые журавли">
+		<img id="logo" src="{% static 'ws/imgs/logo.png' %}" alt="Белые журавли">
 		<div id="auth"></div>
 	</header>
 	<nav>
@@ -66,7 +66,7 @@
 	<footer id="footer"></footer>
 </div>
 </body>
-<script src="{% static 'whiteshadoofs/js/map.js' %}"></script>
-<script src="{% static 'whiteshadoofs/js/mediator.js' %}"></script>
-<script src="{% static 'whiteshadoofs/js/script.js' %}"></script>
+<script src="{% static 'ws/js/map.js' %}"></script>
+<script src="{% static 'ws/js/mediator.js' %}"></script>
+<script src="{% static 'ws/js/script.js' %}"></script>
 </html>
