--- a/templates/ws/profile/login_page.html
+++ b/templates/ws/profile/login_page.html
@@ -1,8 +1,8 @@
-<div id="login_page" class="profile">
-    <form id="user_login" name="user_login" accept-charset="utf-8" method="post" enctype="multipart/form-data" action="{% url 'ws:user_login' %}"></form>
-    <label for="user_login"></label>
-    <input type="email" placeholder="email" size="255" autocomplete="on" form="user_login" autofocus required>
-    <input type="password" placeholder="password" size="50" autocomplete="off" form="user_login" required>
-    <input type="submit"  value="Send!">
-
-</div>
+{#<div id="login_page" class="profile">#}
+{#    <form id="user_login" name="user_login" accept-charset="utf-8" method="post" enctype="multipart/form-data" action="{% url 'ws/user_login' %}"></form>#}
+{#    <label for="user_login"></label>#}
+{#    <input type="email" placeholder="email" size="255" autocomplete="on" form="user_login" autofocus required>#}
+{#    <input type="password" placeholder="password" size="50" autocomplete="off" form="user_login" required>#}
+{#    <input type="submit"  value="Send!">#}
+{##}
+{#</div>#}
