the ancillary commit between workdays

--- a/ws/templates/ws/index.html
+++ b/ws/templates/ws/index.html
@@ -37,7 +37,7 @@
 		<aside id="aside">
             <ul id="category_list"></ul>
 {#            {% include 'category_list.html' %}#}
-{#            {% include 'ws/menu/search/search_filter.html' %}#}
+            {% include 'search_filter.html' %}
 {#            {% include 'ws/menu/search/search_result.html' %}#}
 {#            {% include 'ws/add_object.html' %}#}
 		</aside>
