--- a/ws/templates/ws/search/search_filter.html
+++ b/ws/templates/ws/search/search_filter.html
@@ -14,6 +14,11 @@
         <input name="city" type="textarea" placeholder="Населенный пункт" form='search_form'><br>
         <input name="street" type="textarea" placeholder="Улица" form='search_form'><br>
         <input name="to_search" type="submit" value="Поиск" form='search_form'>
-    <form id='search_form' action="" method="GET"></for
+    <form id='search_form' action="" method="GET"></form>
+    </div>
+    <div id="sf_block_5" class="posabs">
+        <a href="{% url 'ws:add' %}">
+            <button>Добавить объект</button>
+        </a>
     </div>
 </div>
