--- a/ws/static/ws/css/menu.css
+++ b/ws/static/ws/css/menu.css
@@ -119,6 +119,10 @@ nav li:hover {
 #sf_block_4 input {
     margin-bottom: 5px;
 }
+#sf_block_5 {
+    top: 250px;
+    left: 15px;
+}
 #sf_block_2 {
     top: 0px;
     left: 20px;
