Forms, templates and views for creating new object was done partially. Planing reworking DB: removing Geo_object

--- a/ws/templates/ws/add/add_mem_event.html
+++ b/ws/templates/ws/add/add_mem_event.html
@@ -4,7 +4,7 @@
     <title>Новый объект</title>
   </head>
   <body>
-    <form id="add_object" name="add_object" action="" method="post">
+    <form id="add_mem_event" name="add_mem_event" action="" method="post">
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit">Добавить</button>
