geo_object was removed, saving and geocoding of objects and addresses was not added yet

--- a/ws/templates/ws/add/base_add.html
+++ b/ws/templates/ws/add/base_add.html
@@ -17,6 +17,9 @@
                         <a href="{% url 'ws:add_address' %}">
                             <button type="button">Добавить</button>
                         </a>
+                        <a href="{% url 'ws:point_address' %}">
+                            <button type="button">Указать на карте</button>
+                        </a>
                     </p>
                 {% else %}
                     <p>{{ field }}</p>
