--- a/ws/templates/ws/index.html
+++ b/ws/templates/ws/index.html
@@ -48,7 +48,7 @@
 
 		<div id="actionsWindow_1" class="actionsWindow"></div>
 
-        {% include 'about_page.html' %}
+        {% include 'about_page.html' with user=user %}
 	</section>
 	<footer id="footer"></footer>
 </div>
