--- a/ws/templates/ws/point/point_address.html
+++ b/ws/templates/ws/point/point_address.html
@@ -3,15 +3,20 @@
 <html lang="en">
 <head>
 	<script defer src="http://api-maps.yandex.ru/2.1/?lang=ru_RU&mode=debug"></script>
+	<script defer src="{% static 'js/jquery-2.1.3.min.js' %}"></script>
     <script defer src="{% static 'js/point_address/map.js' %}"></script>
     <meta charset="UTF-8">
     <title>Указать адрес на карте</title>
 
     <style>
+{#todo вынести стили отсюда #}
         #point_address_map {
             width:500px;
             height:350px;
             background-color: #555;
+        }
+        #id_address {
+            width: 800px;
         }
     </style>
 </head>
@@ -22,6 +27,7 @@
         {{ form.as_p }}
     </form>
     <button id="request_address" type="button">Проверить</button>
+{#todo спрятать кнопку пока не нажата Проверить #}
         <button type="submit" form="point_address_form">Сохранить</button>
 </body>
 </html>
